--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 spring:
   datasource:
     # driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/dbp_week3?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/leftout?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     # url: jdbc:mysql://localhost:{port??}/{DB??}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: user_01
     password: 1234
