--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,13 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	runtimeOnly 'mysql:mysql-connector-j'
-	implementation 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	// 비밀번호 암호화를 위한 Spring Security Crypto
 	implementation 'org.springframework.security:spring-security-crypto'
+
+	// JSON 처리를 위한 Jackson (Spring Boot에 기본 포함되지만 명시적으로 추가)
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 tasks.named('test') {
