--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
     # url: jdbc:mysql://localhost:{port??}/{DB??}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: user_01
     password: 1234
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -19,3 +24,9 @@ recipe:
   api:
     key: "0588ffa0bfe44ef1b340"
     base-url: http://openapi.foodsafetykorea.go.kr/api
+
+# 파일 업로드 설정
+file:
+  upload:
+    directory: src/main/resources/static/uploads/recipes
+    url-prefix: /uploads/recipes
