--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,10 @@ server:
   port: 8080
 
 spring:
-  profiles:
-    active: prod # 실행 시 application-prod.yml을 자동으로 읽어오게 설정
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/leftout?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: user_01
-    password: "" # 비밀번호는 비워둠 (prod 파일에서 가져옴)
+    username: {USER_ID}
+    password: {USER_PASSWORD} # 비밀번호는 비워둠 (prod 파일에서 가져옴)
   servlet:
     multipart:
       enabled: true
@@ -21,8 +19,8 @@ mybatis:
 # 식품안전나라 레시피 API 설정
 recipe:
   api:
-    key: "" # 키값은 비워둠 (prod 파일에서 가져옴)
-    base-url: http://openapi.foodsafetykorea.go.kr/api
+    key: {API_KEY}
+    base-url: {API_URL}
 
 # 파일 업로드 설정
 file:
