--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,17 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/leftout?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: {USER_ID}
-    password: {USER_PASSWORD} # 비밀번호는 비워둠 (prod 파일에서 가져옴)
+    # Render의 DB_HOST, DB_PORT, DB_NAME 값을 가져와서 주소 완성
+    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+
+    # Render의 DB_USERNAME 값을 가져옴
+    username: ${DB_USERNAME}
+
+    # Render의 DB_PASSWORD 값을 가져옴
+    password: ${DB_PASSWORD}
+
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   servlet:
     multipart:
       enabled: true
@@ -16,14 +24,13 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   config-location: classpath:mybatis-config.xml
 
-# 식품안전나라 레시피 API 설정
 recipe:
   api:
-    key: {API_KEY}
-    base-url: {API_URL}
+    # 스크린샷에 'API_KEY'라고 되어 있어서 그 이름을 그대로 씁니다.
+    key: ${API_KEY}
+    base-url: http://openapi.foodsafetykorea.go.kr/api
 
-# 파일 업로드 설정
 file:
   upload:
-    directory: src/main/resources/static/uploads/recipes
+    directory: ${FILE_UPLOAD_DIR:/app/uploads/recipes}
     url-prefix: /uploads/recipes
