feat:음식 AI 인식 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     # Render의 DB_HOST, DB_PORT, DB_NAME 값을 가져와서 주소 완성
-    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-
+    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&connectTimeout=60000
+# 연결 안정성을 위해 옵션 추가 (SSL 해제, 자동 재접속, 타임아웃 연장)
     # Render의 DB_USERNAME 값을 가져옴
     username: ${DB_USERNAME}
 
@@ -34,3 +34,9 @@ file:
   upload:
     directory: ${FILE_UPLOAD_DIR:/app/uploads/recipes}
     url-prefix: /uploads/recipes
+
+huggingface:
+  api:
+    key: ${HF_API_KEY:demo}
+    base-url: https://router.huggingface.co/hf-inference/models
+    model: google/vit-base-patch16-224
